@@ -475,23 +475,22 @@
   <p align="left"><strong>10. ColumnWallBox</strong> - creates 4 walls (box) at 
     the specified coordinate locations, as part of the current floor's columnframe 
     mesh<br>
-    Syntax: <font size="2" face="Courier New, Courier, mono">CreateWallBox <em>destobject</em>, 
-    <em>name, texturename</em>, <em>x1</em>, <em>x2</em>, <em>z1</em>, <em>z2</em>, 
-    <em>height</em>, <em>voffset</em>, <em>tw</em>, <em>th, inside, outside, top, 
-    bottom </em></font><br>
-    Example: <font size="2" face="Courier New, Courier, mono">CreateWallBox external, 
-    My Box, brick, -10, 10, -10, 10, 15, 0, 0, 0, true, true, true, true</font></p>
+    Syntax: <font size="2" face="Courier New, Courier, mono">ColumnWallBox <em>name, 
+    texturename</em>, <em>x1</em>, <em>x2</em>, <em>z1</em>, <em>z2</em>, <em>height</em>, 
+    <em>voffset</em>, <em>tw</em>, <em>th, inside, outside, top, bottom </em></font><br>
+    Example: <font size="2" face="Courier New, Courier, mono">ColumnWallBox My 
+    Box, brick, -10, 10, -10, 10, 15, 0, 0, 0, true, true, true, true</font></p>
   <p align="left">For parameter information, see the CreateWallBox command above. 
     In this command, the default voffset is the floor's altitude.</p>
   <p align="left"><strong>11. ColumnWallBox2</strong> - creates 4 walls (box) 
     at a specified central location, as part of the current floor's columnframe 
     mesh <br>
-    Syntax: <font size="2" face="Courier New, Courier, mono">CreateWallBox2 <em>destobject</em>, 
-    <em>name, texturename</em>, <em>centerx</em>, <em>centerz</em>, <em>widthx</em>, 
-    <em>lengthz</em>, <em>height</em>, <em>voffset</em>, <em>tw</em>, <em>th</em><em>, 
-    inside, outside, top, bottom </em></font><br>
-    Example: <font size="2" face="Courier New, Courier, mono">CreateWallBox2 external, 
-    My Box, brick, 0, 0, 10, 10, 15, 0, 0, 0, false, true, false, false</font></p>
+    Syntax: <font size="2" face="Courier New, Courier, mono">ColumnWallBox2 <em>name, 
+    texturename</em>, <em>centerx</em>, <em>centerz</em>, <em>widthx</em>, <em>lengthz</em>, 
+    <em>height</em>, <em>voffset</em>, <em>tw</em>, <em>th</em><em>, inside, outside, 
+    top, bottom </em></font><br>
+    Example: <font size="2" face="Courier New, Courier, mono">ColumnWallBox2 My 
+    Box, brick, 0, 0, 10, 10, 15, 0, 0, 0, false, true, false, false</font></p>
   <p align="left">For parameter information, see the CreateWallBox2 command above. 
     In this command, the default voffset is the floor's altitude.</p>
   <p align="left"><strong>12. CallButtonElevators</strong> - comma-separated list 
