@@ -33,7 +33,7 @@ Skyscraper.Frontend.RenderOnly = false
 Skyscraper.Frontend.InputOnly = false
 
 ;automatically load a specific building
-;Skyscraper.Frontend.AutoLoad = Simple.bld
+;Skyscraper.Frontend.AutoLoad = Triton Center.bld
 
 ;show control panel on startup
 Skyscraper.Frontend.ShowControlPanel = true
@@ -112,6 +112,9 @@ Skyscraper.SBS.HorizonDistance = 30
 
 ;delete wall geometry when removing objects by default (set to false for possibly faster speed but higher memory usage)
 Skyscraper.SBS.RemoveWallGeometry = true
+
+;maximum distance in feet to render small objects (controls, indicators, etc)
+Skyscraper.SBS.MaxSmallRenderDistance = 100
 
 
 ;
