@@ -1,8 +1,9 @@
-
 Version 1.8 (2.0 Alpha 8)
 -------------------------
 -new internal mesh system
 -new horizon distance setting
+-added render distance limits for small objects
+-added lighting system
 
 Version 1.7 (2.0 Alpha 7)
 -------------------------
